--- a/App/Styling/App.css
+++ b/App/Styling/App.css
@@ -3,7 +3,8 @@
   background-image: url(../../public/bg.jpg);
 
   /* Full height */
-  height: 100%;
+  height: 100vw;
+  margin: 0;
 
   /* Center and scale the image nicely */
   background-position: center;
