--- a/App/Styling/App.css
+++ b/App/Styling/App.css
@@ -3,7 +3,7 @@
   background-image: url(../../public/bg.jpg);
 
   /* Full height */
-  height: 100vw;
+  height: 100vh;
   margin: 0;
 
   /* Center and scale the image nicely */
