--- a/App/Styling/App.css
+++ b/App/Styling/App.css
@@ -10,4 +10,6 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
+  overflow: auto;
 }
